--- a/static/css/style.css
+++ b/static/css/style.css
@@ -14,6 +14,12 @@ body{
     border-radius: 5px;
 }
 
+.welcome-logo{
+    width: 140px;
+    border-radius: 5px;
+    margin: 5px;
+}
+
 .bg-light {
     background-color: #3a3a3a !important;
   }
