--- a/slackbook_user/templates/base/index.html
+++ b/slackbook_user/templates/base/index.html
@@ -7,9 +7,11 @@
     <div class="row">
 
       <div class="col smaller_screens">
+        {% if user.is_authenticated %}
         <h2 class="index-headline">Brows Topics</h2>
         {% include 'base/topics-index.html' %}
         {% include 'base/browse-channel.html' %}
+        {% endif %}
       </div>
 
       <div class="col-5 index-center small_screens">
@@ -18,8 +20,10 @@
       </div>
 
       <div class="col no_small_screens">
+        {% if user.is_authenticated %}
         <h2 class="index-headline">Active Users</h2>
         {% include 'base/recently-active-index.html' %}
+        {% endif %}
       </div>
 
     </div>
