--- a/slackbook_user/templates/base/recently-active-index.html
+++ b/slackbook_user/templates/base/recently-active-index.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-around">
-    <div class="col-4 main-content">
+    <div class="col-4 main-content user-scroll">
         <div>
             <!-- All Users ordered by last login and filterable  -->
             {% for user in users reversed %}
