--- a/slackbook_user/templates/base/delete.html
+++ b/slackbook_user/templates/base/delete.html
@@ -4,9 +4,9 @@
     <div class="row text-white bg-dark main-content">
         <div class="col-md-3"></div>
         <div class="col-md-6 delete-form channel-content">   
-            <form action="" method="POST">
+            <form action="{% url 'home' %}" method="POST">
                 {% csrf_token %}
-                <a class="field-headline btn btn-outline-success button" href="{{request.META.HTTP_REFERER}}">Back</a>
+                <a class="field-headline btn btn-outline-success button" href="{{request.META.HTTP_REFERER}}"><i class="fas fa-arrow-alt-circle-left"></i></a>
                 <br>
                 <div class="field-contend">
                     <p>Are you sure you want to delete:</p>
