--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
                                 </li>
                             </ul>
                             {% endif %}
-                            <ul>
+                            <ul style="margin-top: -20px;">
                                 <li class="nav-item">
                                     <a class="nav-link" href="{% url 'topics' %}">Categories and Channels</a>
                                 </li>
