--- a/slackbook_user/templates/base/user-settings.html
+++ b/slackbook_user/templates/base/user-settings.html
@@ -4,7 +4,7 @@
     <div class="row text-white bg-dark main-content">
         
         <div class="col-md-6 offset-md-3 channel-content">
-            <form action="" method="POST" enctype="multipart/form-data">
+            <form action="{% url 'user-settings' %}" method="POST" enctype="multipart/form-data">
                 <!-- with enctype="multipart/form-data" we can submit files not just content/text -->
                     {% csrf_token %}
                     {% for field in user_form %}
