--- a/slackbook_user/templates/base/chat.html
+++ b/slackbook_user/templates/base/chat.html
@@ -70,7 +70,7 @@
                             {% if 'chat' in request.path %}
                             <input class="comment-field" type="text" placeholder="Place your meassage..." name="body">
                             {% endif %}
-                            <button class="btn btn-outline-success button" type="submit">send message</button>
+                            <button class="btn btn-outline-success button" type="submit"><i class="fas fa-envelope"></i></button>
                         </form>
                     </div>
                     {% if 'chat' in request.path %}
