--- a/static/css/style.css
+++ b/static/css/style.css
@@ -298,6 +298,15 @@ body{
     align-items: center;
 }
 
+/* Creat/Update Channel */
+#id_guests{
+    width: 100px;
+    background-color: cadetblue;
+    color: black;
+    border: 1px solid aqua;
+    border-radius: 5px;
+}
+
 /* Footer */
 footer{
     position: fixed;
