--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Rubik&display=swap');
 
+/* Font type and general settings */
+
 body{
     overflow-x: hidden;
 }
@@ -8,6 +10,25 @@ body{
     --bs-gutter-x: 0;
     --bs-gutter-y: 0;
 }
+
+.bg-light {
+    background-color: #3a3a3a !important;
+}
+
+.button{
+background-color: unset;
+color: darkcyan;
+border-color: darkcyan;
+margin: 2px;
+}
+
+.private-button{
+    color: white;
+    margin-bottom: 5px;
+    margin-left: -13px;
+}
+
+/* Logo */
 
 .brand{
     border: 2px solid rgb(57, 57, 57);
@@ -21,10 +42,7 @@ body{
     margin: 5px;
 }
 
-.bg-light {
-    background-color: #3a3a3a !important;
-  }
-
+/* User Inmage and default avatar */
 .user-image{
     width: 35px;
     height: 35px;
@@ -45,6 +63,7 @@ body{
     border: 2px solid red;
     border-radius: 50px;
 }
+
 /* ------Allauth------- */
 .signUp{
     text-align: center;
@@ -62,8 +81,7 @@ body{
     width: -moz-available;
 }
 
-
-/* -----Header-------- */
+/* -----Header/Navbar-------- */
 .header{
     text-align: center;
     display: block ruby;
@@ -102,22 +120,9 @@ body{
     background-color: darkcyan;
 }
 
-/* ------Content------ */
+/* ------Content Window------ */
 .index-headline{
     margin: 20px auto;
-}
-
-.button{
-    background-color: unset;
-    color: darkcyan;
-    border-color: darkcyan;
-    margin: 2px;
-}
-
-.private-button{
-    color: white;
-    margin-bottom: 5px;
-    margin-left: -13px;
 }
 
 .delete-post{
@@ -129,8 +134,6 @@ body{
     color: darkcyan;
     border-color: darkcyan;
 }
-
-
 
 /* Main Content */
 .container{
@@ -204,36 +207,10 @@ body{
     width: unset;
 }
 
-.channel-scroll{
-    height: 400px;
-/* overflow-y: scroll; */
-    overflow-y: auto;
-}
-
-.channel-scroll-topics{
-    height: 100px;
-    overflow-y: auto;
-}
-
-.topic-scroll {
-    height: 200px;
-    overflow-y: auto;
-    overflow-x: hidden;
-    border-bottom-right-radius: 0px;
-    border-bottom-left-radius: 0px;
-  }
-
-.user-scroll{
-    height: 742px;
-    overflow-y: auto;
-    margin-bottom: 95px;
-}
-
 .topic-index-button{
     border-top-right-radius: 0px;
     border-top-left-radius: 0px;
     margin-top: -11px;
-
 }
 
 .post-image{
@@ -255,8 +232,46 @@ body{
     color: white;
 }
 
-/* User-settings */
+/* Scrollbars */
+.channel-scroll{
+    height: 400px;
+    overflow-y: auto;
+}
 
+.channel-scroll-topics{
+    height: 100px;
+    overflow-y: auto;
+}
+
+.topic-scroll {
+    height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border-bottom-right-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+.user-scroll{
+    height: 742px;
+    overflow-y: auto;
+    margin-bottom: 95px;
+}
+
+::-webkit-scrollbar {
+    width: 9px;
+}
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+::-webkit-scrollbar-thumb {
+    background-color: rgba(155, 155, 155, 1.5);
+    border-radius: 5px;
+    border: transparent;
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+}
+
+/* User-settings */
 #id_body{
     height: 50px;
     width: -moz-available;
@@ -272,13 +287,12 @@ body{
     border-radius: 5px;
 }
 
-/* Acout dropdown */
+/* Accout dropdown */
 .dropdown-menu.show {
     background-color: darkslategray;
     color: white !important;
     padding: 5px;
   }
-
 
 .contact-window{
     display: flex;
@@ -323,31 +337,6 @@ footer{
     margin: 0 50px;
     font-size: 35px;
   }
-
-
-/* ---------Messages------------ */
- /* .message {
-	border-radius: 10px;
-	box-shadow: 3px 3px 4px 0px rgba(50, 50, 50, 0.75);
-	color: white;
-	margin-bottom: 20px;
-	margin-left: auto;
-	margin-right: auto;
-	padding-bottom: 5px;
-	padding-top: 5px;
-	text-align: center;
-	width: 80%;
-}
-
-
-.message.success {
-	background-color: green;
-}
-
-.message.error {
-	background-color: red;
-} */
-
 
 /* Media Queries */
 @media (max-width: 992px) {
