--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="row header no-gutters">
-            <div class="col-md-4">
+            <div class="col-md-4 tablet">
                 <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}"
                         alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
