--- a/slackbook_user/templates/base/chat.html
+++ b/slackbook_user/templates/base/chat.html
@@ -26,7 +26,7 @@
 
 <body class="text-white bg-dark">
     <div class="row">
-        <div class="col-md-6 offset-md-3">
+        <div class="col-md-6 offset-md-3" style="margin: auto; width: auto;">
             <div class="main-content">
                 <div class="channel-content">
                     {% if 'chat' in request.path %}
