changed channel media query style

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -419,11 +419,16 @@ footer{
     width: 80%;
     }
 
-.channel-headline{
+.channel-headline {
     font-size: 90%;
     }
 
-.headline{
+.headline {
     font-size: 80%;
 }
+
+.col-9 {
+    width: auto;
+}
+
 }
